--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./navbar.css">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
@@ -108,19 +110,21 @@
             <div class="slogan slogan-end">騎車才不會錯過美麗的風景。</div>
             <div class="sub-slogan sub-slogan-first">自由</div>
             <div class="sub-slogan sub-slogan-middle">的心</div>
+            <embed class="sub-slogan-mask" src="/img/index/標題用.svg" type="">
             <div class="sub-slogan sub-slogan-end">和一輛車就夠了。</div>
             <div class="bike-img"></div>
-            <embed class="bike-mask" src="img/縮小版.svg" type="">
+            <embed class="bike-mask" src="img/index/縮小版.svg" type="">
             <div class="banner"></div>
-            <embed class="banner-mask" src="img/banner-mask.svg" type="">
+            <embed class="banner-mask" src="img/index/banner-mask.svg" type="">
 
 
 
         </section>
 
         <section id="middle">
-            <embed class="middle-background" src="/img/首頁背景.svg" type="">
-            <div id="visual" class="column d-flex">
+            <div class="bike-moving"></div>
+            <embed class="middle-background" src="/img/index/首頁背景.svg" type="">
+            <div id="visual" class="column d-flex" data-aos="fade-right">
                 <div class="col-6">
                     <div class="gorgeousness-img left"></div>
                 </div>
@@ -134,7 +138,7 @@
                     </div>
                 </div>
             </div>
-            <div id="taste" class="column d-flex">
+            <div id="taste" class="column d-flex" data-aos="fade-left">
                 <div class="col-6">
                     <div class="gorgeousness-text left">
                         <div class="title">味覺Taste_______________</div>
@@ -147,7 +151,7 @@
                     <div class="gorgeousness-img right"></div>
                 </div>
             </div>
-            <div id="tactile" class="column d-flex">
+            <div id="tactile" class="column d-flex" data-aos="fade-right">
                 <div class="col-6">
                     <div class="gorgeousness-img left"></div>
                 </div>
@@ -161,7 +165,7 @@
                     </div>
                 </div>
             </div>
-            <div id="hearing" class="column d-flex">
+            <div id="hearing" class="column d-flex" data-aos="fade-left">
                 <div class="col-6">
                     <div class="gorgeousness-text left">
                         <div class="title">聽覺Hearing_____________</div>
@@ -206,15 +210,15 @@
                     <div class="anchor-point-circle"></div>
                 </div>
             </div>
-
+            <div class="mountain"></div>
         </section>
 
         <section id="bottom">
-            <embed class="photo-wall-mask" src="/img/照片牆用.svg" type="">
+            <embed class="photo-wall-mask" src="/img/index/照片牆用.svg" type="">
             <div id="photo" class="photo-wall">
 
                 <div class="photo-wall-title">相片牆</div>
-                <embed class="photo-wall-title-mask" src="/img/照片牆用-2.svg" type="">
+                <embed class="photo-wall-title-mask" src="/img/index/照片牆用-2.svg" type="">
                 <ul class="photo-wall-categories">
                     <li class="photo-wall-category">All</li>
                     <li class="photo-wall-category">Animation</li>
@@ -235,7 +239,11 @@
                     <div class="photo"></div>
                 </div>
             </div>
-            <embed class="footer-mask" src="/img/footer用.svg" type="">
+            <embed class="footer-mask" src="/img/index/footer用-總和.png" type="">
+            <embed class="grass" src="/img/index/footer草叢.svg" type="">
+            <a href="">
+                <div class="billboard"></div>
+            </a>
         </section>
 
         <footer>
@@ -274,17 +282,9 @@
                     <div class="footer-menu-item">交通資訊</div>
                     <div class="footer-menu-item">聯絡我們</div>
                 </div>
-
                 <div class="footer-news"></div>
-
             </div>
-
-
-
-
         </footer>
-
-
     </main>
 
 
@@ -296,10 +296,16 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
     <!-- swiper js -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-    <script src="./navbar.js"></script>
-    <script src="/index.js"></script>
+    <script src="/js/navbar.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
