--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/css/navbar.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -105,17 +105,17 @@
         </nav>
 
         <section id="top">
-            <div class="logo">后豐鐵馬道</div>
+            <div class="logo"><img src="./img/index/LOGO.png" alt=""></div>
             <div class="slogan slogan-first">坐車太快，徒步太慢，</div>
             <div class="slogan slogan-end">騎車才不會錯過美麗的風景。</div>
             <div class="sub-slogan sub-slogan-first">自由</div>
             <div class="sub-slogan sub-slogan-middle">的心</div>
-            <embed class="sub-slogan-mask" src="/img/index/標題用.svg" type="">
+            <embed class="sub-slogan-mask" src="/img/index/標題用.png" type="">
             <div class="sub-slogan sub-slogan-end">和一輛車就夠了。</div>
             <div class="bike-img"></div>
-            <embed class="bike-mask" src="img/index/縮小版.svg" type="">
-            <div class="banner"></div>
-            <embed class="banner-mask" src="img/index/banner-mask.svg" type="">
+            <embed class="bike-mask" src="/img/index/縮小版.png" type="">
+            <div class="banner"><img src="./img/index/06-www.leeleelin.com-SteelBridge-5.jpg" alt=""></div>
+            <embed class="banner-mask" src="/img/index/nav用.png" type="">
 
 
 
@@ -123,10 +123,10 @@
 
         <section id="middle">
             <div class="bike-moving"></div>
-            <embed class="middle-background" src="/img/index/首頁背景.svg" type="">
+            <embed class="middle-background" src="/img/index/首頁背景.png" type="">
             <div id="visual" class="column d-flex" data-aos="fade-right">
                 <div class="col-6">
-                    <div class="gorgeousness-img left"></div>
+                    <div class="gorgeousness-img left left-1"></div>
                 </div>
                 <div class="col-6">
                     <div class="gorgeousness-text right">
@@ -148,12 +148,12 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="gorgeousness-img right"></div>
+                    <div class="gorgeousness-img right right-1"></div>
                 </div>
             </div>
             <div id="tactile" class="column d-flex" data-aos="fade-right">
                 <div class="col-6">
-                    <div class="gorgeousness-img left"></div>
+                    <div class="gorgeousness-img left left-2"></div>
                 </div>
                 <div class="col-6">
                     <div class="gorgeousness-text right">
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="gorgeousness-img right"></div>
+                    <div class="gorgeousness-img right right-2"></div>
                 </div>
             </div>
 
@@ -214,11 +214,11 @@
         </section>
 
         <section id="bottom">
-            <embed class="photo-wall-mask" src="/img/index/照片牆用.svg" type="">
+            <embed class="photo-wall-mask" src="/img/index/照片牆用-1.png" type="">
             <div id="photo" class="photo-wall">
 
                 <div class="photo-wall-title">相片牆</div>
-                <embed class="photo-wall-title-mask" src="/img/index/照片牆用-2.svg" type="">
+                <embed class="photo-wall-title-mask" src="/img/index/照片牆用-2.png" type="">
                 <ul class="photo-wall-categories">
                     <li class="photo-wall-category">All</li>
                     <li class="photo-wall-category">Animation</li>
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <embed class="footer-mask" src="/img/index/footer用-總和.png" type="">
-            <embed class="grass" src="/img/index/footer草叢.svg" type="">
+            <embed class="grass" src="/img/index/footer草叢.png" type="">
             <a href="">
                 <div class="billboard"></div>
             </a>
