--- a/store.html
+++ b/store.html
@@ -21,7 +21,7 @@
                     <div class="col d-flex align-items-baseline title">
                         <h1>美食饗宴</h1>
                     </div>
-                    <h3 class="subtitle">我是文字</h3>
+                    <h3 class="subtitle">Food recommendation</h3>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -68,7 +68,7 @@
                         <div class="col d-flex align-items-baseline title">
                             <h1>騎上鐵馬</h1>
                         </div>
-                        <h3 class="subtitle">我是文字</h3>
+                        <h3 class="subtitle">Attractions Map</h3>
                     </div>
                     <div class="row">
                         <div class="col">
@@ -84,7 +84,7 @@
                     <div class="col d-flex align-items-baseline title">
                         <h1>帶伴手禮</h1>
                     </div>
-                    <h3 class="subtitle">我是文字</h3>
+                    <h3 class="subtitle">Souvenirs Recommended</h3>
                 </div>
                 <div class="row d-flex justify-content-evenly flex-wrap pt-5">
                     <div class="col px-0">
@@ -92,14 +92,12 @@
                             <div class="img"></div>
                             <figcaption>
                                 <i class="ion-upload"></i>
-                                <h4>Inverness</h4>
+                                <h4>石山丘</h4>
                                 <h2>McKenzie</h2>
                             </figcaption>
                             <!-- <a href="#"></a> -->
                         </figure>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos ex vero quis. Quia
-                            ad sed veritatis dicta! Nulla non explicabo cumque vel numquam adipisci ex quasi minima,
-                            in porro iste.
+                        <p>石岡超人氣神級吐司之稱，沒預約還吃不到，招牌紅寶石是用花蓮紅粟米及四種起司來製作，口感Q彈好吃，非常真材實料
                         </p>
                     </div>
                     <div class="col px-0">
