--- a/attraction.html
+++ b/attraction.html
@@ -20,7 +20,7 @@
                     <div class="col d-flex align-items-baseline title">
                         <h1>網美拍照地</h1>
                     </div>
-                    <h3 class="subtitle">網美拍照地</h3>
+                    <h3 class="subtitle">Photo spot</h3>
                 </div>
                 <div class="row mb-5">
                     <div class="col px-0">
@@ -79,7 +79,7 @@
                     <div class="col d-flex align-items-baseline title">
                         <h1>特別推薦</h1>
                     </div>
-                    <h3 class="subtitle">我是文字</h3>
+                    <h3 class="subtitle">Special</h3>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -114,7 +114,7 @@
                     <div class="col d-flex align-items-baseline title">
                         <h1>主題套裝行程</h1>
                     </div>
-                    <h3 class="subtitle">我是文字</h3>
+                    <h3 class="subtitle">Package itinerary</h3>
                 </div>
                 <div class="row d-flex">
                     <div class="col-xl-4 row-cols-md-1 px-0 theme">
