--- a/bike.html
+++ b/bike.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>形象頁v13</title>
+    <title>形象頁</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/形象頁/css/biking-13 .css">
+    <link rel="stylesheet" href="/css/biking.css">
     <style>
         button{
             position: relative;
@@ -21,7 +21,7 @@
             font-weight: 900;
             background-color: transparent;
             transition: .1s;
-            background-image: url("img/banner點綴\ .png");
+            background-image: url('/img/biking/banner-back.png');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
@@ -42,7 +42,7 @@
             justify-content: center;
             align-items: center;
             transition: .8s;
-            background-image: url("/形象頁/img/start.jpg");
+            background-image: url('/img/biking/start.jpg');
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
@@ -133,7 +133,7 @@
     </main>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="/形象頁/js/bike12.js"></script>
+    <script src="/js/biking.js"></script>
 
 </body>
 
