--- a/bike.html
+++ b/bike.html
@@ -19,6 +19,7 @@
             color: #fff;
             font-size: 2.3rem;
             font-weight: 900;
+            border: none;
             background-color: transparent;
             transition: .1s;
             background-image: url('/img/biking/banner-back.png');
