--- a/service.html
+++ b/service.html
@@ -16,9 +16,11 @@
 
 <body>
     <section id="middle">
+        <div class="middle-background"></div>
         <div class="col d-flex align-items-baseline title">
             <h1>基本資訊</h1>
         </div>
+        <embed class="title-mask" src="/img/service/標題用.png" type="">
         <h3 class="subtitle">Information</h3>
         <div class="content">
             　　騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見的工程作品，光是在遠處觀望便能感受其滂薄的氣勢。騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見的工程作品，光是在遠處觀望便能感受其滂薄的氣勢。騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見的工程作品，光是在遠處觀望便能感受其滂薄的氣勢。騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見的工程作品，光是在遠處觀望便能感受其滂薄的氣勢。騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見
@@ -32,8 +34,9 @@
             <div class="col d-flex align-items-baseline title">
                 <h1>交通資訊</h1>
             </div>
+            <embed class="title-mask" src="/img/service/標題用.png" type="">
             <h3 class="subtitle">Transportation</h3>
-            
+
             <div class="cards">
                 <div class="card">
                     <div class="card-title">我是title</div>
