--- a/bike.html
+++ b/bike.html
@@ -8,7 +8,7 @@
     <title>形象頁</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/biking.css">
+    <link rel="stylesheet" href="/css/bike.css">
     <style>
         button{
             position: relative;
@@ -134,7 +134,7 @@
     </main>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="/js/biking.js"></script>
+    <script src="/js/bike.js"></script>
 
 </body>
 
