--- a/bike.html
+++ b/bike.html
@@ -125,7 +125,7 @@
     
     <main>
         <div class="skip-btn" >
-            <i onclick="" class="fas fa-play"></i>
+            <i class="fas fa-play"></i>
         </div>
         <section class="veiw">
             
