--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <nav>
             <ul class="navbar">
-                <li><a><img class="nav-logo" src="./img/index/LOGO-icon.png" alt=""></a></li>
+                <li><a><img class="nav-logo" src="/img/index/LOGO-icon.png" alt=""></a></li>
                 <li class="navbar-title">消息
                     <div class="nav-detail">
                         <div class="nav-detail-title">消息</div>
