--- a/bike.html
+++ b/bike.html
@@ -19,11 +19,12 @@
             left: 5%;
             border: none;
             background-color: transparent;
-            transition: .1s;
+            transition: 0.1s;
             background-image: url('/img/biking/LOGO.png');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
+            cursor: pointer;
         }
         button:hover{
             color: #fa0;
@@ -40,7 +41,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            transition: .8s;
+            transition: 0.5s;
             background-image: url('/img/biking/start.jpg');
             background-position: center;
             background-size: cover;
@@ -64,7 +65,6 @@
         }
         .loader.none{
             display: none;
-            background-image: url("/");
         }
         .loader::before{
             content: '';
