store-content update

--- a/store-content.html
+++ b/store-content.html
@@ -22,7 +22,7 @@
                     <div class="col d-flex align-items-baseline title">
                         <h1>3Q芋圓</h1>
                     </div>
-                    <h3 class="subtitle">我是文字</h3>
+                    <h3 class="subtitle">Taro ball</h3>
                 </div>
                 <div class="row row-cols-2 justify-content-center mb-5">
                     <div class="col-5 me-4 store-img"></div>
@@ -48,15 +48,9 @@
                         <div class="news-title-border"></div>
                     </div>
                     <div class="col-7 px-4 news-content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eveniet repellendus quos?
-                            Odit et similique, ducimus, nesciunt voluptates incidunt debitis facere odio neque, illo
-                            sint tempora facilis tenetur eligendi enim. Hic laudantium facere aperiam rerum dolorum
-                            molestiae cum, porro neque ullam impedit velit earum pariatur doloribus, dolore accusamus
-                            error. Alias porro, consequuntur tenetur incidunt, quidem architecto suscipit fuga rerum
-                            aliquam corrupti illo voluptate recusandae magni iste? Corporis provident temporibus
-                            inventore error minima fugiat ipsam magni itaque nobis nesciunt reprehenderit quisquam
-                            deserunt, deleniti quaerat quos. Culpa, esse cumque voluptate iusto ad dolores? Ad, magni
-                            cumque quis obcaecati blanditiis assumenda nisi minima?</p>
+                        <p class="news-content-p">前往了東關路七段的「3Q芋圓」想要吃個冰冰涼涼的芋圓消暑解渴一下～牆壁上有一面黑板上頭有寫著店內的品項，有芋圓冰、芋圓嫩仙草，也有熱的品項像是紅豆湯之類，每份都是40大洋。如果想吃冰多一點的就點芋圓冰，冰少一點的就是芋圓嫩仙草。
+                            <br>店內的芋圓、番薯圓、嫩仙草都是自己做的，仙草吃起來有甘甜微苦的韻味，冰冰涼涼又滑又嫩的口感，非常好吃。
+                            芋圓是使用大甲芋頭製作，咀嚼起來很Q，番薯圓則是使用大肚山的番薯，吃起來香氣也很明顯。店內的芋頭熬煮的非常的綿密細緻，幾乎已經成了芋頭泥的情況，很香甜，也算是比較特別的一點，喜歡吃蜜芋頭的捧油可以點來試試看～整間店的用料都很用心實在，看網路上的評價也都很好，大夥如果來東勢玩，天氣熱可以來「3Q芋圓」吃個冰冰涼涼的芋圓唷～</p>
                     </div>
                 </div>
                 <div class="row">
